@@ -33,6 +33,9 @@ New features
   FacetRequest which implements createFacetsAggregator and was indexed
   using the taxonomy index. (Shai Erera)
 
+* LUCENE-5153: AnalyzerWrapper.wrapReader allows wrapping the Reader given to 
+  inputReader. (Shai Erera)
+   
 Bug Fixes
 
 * LUCENE-5116: IndexWriter.addIndexes(IndexReader...) should drop empty (or all
